# zoo

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dist.cmd  dist.sh  dist_amd64.cmd  dist_x86.cmd  vcpkg.json
install/: CMakeLists.txt
zoo/: .clang-format  CMakeLists.txt
zoo/bitcask/: CMakeLists.txt  README.md  apilinktest.cpp  apilinktest.h  basictypes.h  bitcask.cpp  bitcask.h  crc32.cpp  crc32.h  datadir.cpp  datadir.h  datafile.cpp  datafile.h  file.cpp  file.h  hintfile.cpp  hintfile.h  hton.h  keydir.cpp  keydir.h
zoo/bitcask/examples/: CMakeLists.txt
zoo/common/: CMakeLists.txt  api.h  apilinktest.cpp  apilinktest.h  compat.h  config.h.in  version.cpp  version.h.in
zoo/common/conversion/: conversion.cpp  conversion.h
zoo/common/examples/: CMakeLists.txt
zoo/common/lockfile/: lockfile.cpp  lockfile.h  lockfile_impl_posix.hpp  lockfile_impl_windows.hpp
zoo/common/logging/: ibackend.cpp  ibackend.h  log_level.h  logging.cpp  logging.h  sourcelocation.h  spdlog_backend.cpp  spdlog_backend.h
zoo/common/misc/: always_false.hpp  byte_string.h  cts.hpp  demangle.cpp  demangle.h  demangled_type_name.hpp  formatters.hpp  is_optional.hpp  is_scoped_enum.hpp  is_shared_ptr.hpp  is_variant.hpp  is_vector.hpp  lock_types.hpp  quoted_c.cpp  quoted_c.h  rlws.hpp  synchronized_queue.hpp  throw_exception.h  uuid.cpp  uuid.h
zoo/fs/: CMakeLists.txt  README.md
zoo/fs/core/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  attributes.cpp  attributes.h  destination.cpp  destination.h  direntry.h  exceptions.cpp  exceptions.h  fspath.h  iaccess.cpp  iaccess.h  ifile.cpp  ifile.h  iinterruptor.cpp  iinterruptor.h  iwatcher.cpp  iwatcher.h  make_dest_path.cpp  make_dest_path.h  noop_interruptor.cpp  noop_interruptor.h  operations.cpp  operations.h  source.cpp  source.h
zoo/fs/examples/: CMakeLists.txt
zoo/fs/local/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  local_access.cpp  local_access.h  local_file.cpp  local_file.h  local_watcher.cpp  local_watcher.h  local_watcher_impl_posix.hpp  local_watcher_impl_windows.hpp  make_attributes.cpp  make_attributes.h  make_direntry.cpp  make_direntry.h
zoo/fs/sftp/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  issh_api.cpp  issh_api.h  issh_identity_factory.cpp  issh_identity_factory.h  issh_knownhosts.cpp  issh_knownhosts.h  make_attributes.cpp  make_attributes.h  make_direntry.cpp  make_direntry.h  ptr_types.h  sftp_access.cpp  sftp_access.h  sftp_exceptions.cpp  sftp_exceptions.h  sftp_file.cpp  sftp_file.h  sftp_options.h  sftp_session.cpp  sftp_session.h  sftp_watcher.cpp  sftp_watcher.h  ssh_api.cpp  ssh_api.h  ssh_connection.cpp  ssh_connection.h  ssh_identity.h  ssh_private_key.cpp  ssh_private_key.h  ssh_pubkey_hash.cpp  ssh_pubkey_hash.h  ssh_public_key.cpp  ssh_public_key.h  ssh_server_pubkey.cpp  ssh_server_pubkey.h
zoo/spider/: CMakeLists.txt  README.md  aliases.h  apilinktest.cpp  apilinktest.h  binary_response.cpp  binary_response.h  buffer_response.cpp  buffer_response.h  concepts.hpp  content_container.hpp  controller.cpp  controller.hpp  controller2.cpp  controller2.hpp  conversions.cpp  conversions.h  dispatcher.hpp  empty_response.cpp  empty_response.h  error_response.cpp  error_response.h  exception.cpp  exception.h  file_response.cpp  file_response.h  handler.hpp  http_session.cpp  http_session.h  ifile_event_listener.cpp  ifile_event_listener.h  irequest_handler.cpp  irequest_handler.h  json_response.cpp  json_response.h  json_util.cpp  json_util.h  listener.cpp  listener.h  log_response.cpp  (+23 more)
zoo/spider/examples/: CMakeLists.txt
zoo/spider/messages/: binary_response.cpp  binary_response.h  buffer_response.cpp  buffer_response.h  content_container.hpp  empty_response.cpp  empty_response.h  error_response.cpp  error_response.h  file_response.cpp  file_response.h  ifile_event_listener.cpp  json_response.cpp  json_response.h  log_response.cpp  message.h  noop_file_event_listener.cpp  noop_file_event_listener.h  response_wrapper.hpp  string_response.cpp  string_response.h  tracked_file.cpp  tracked_file.h
zoo/spider/rest/: annotation.hpp  apikeyauthorization.cpp  apikeyauthorization.h  auth.cpp  auth.h  base64.cpp  base64.h  basicauthorization.cpp  basicauthorization.h  bearerauthorization.cpp  bearerauthorization.h  concepts.hpp  controller.hpp  conversions.cpp  conversions.h  handler.hpp  isecurityscheme.cpp  isecurityscheme.h  openapi.hpp  operation.h  parameters.h  path.cpp  path.h  pathfwd.h  pathspec.cpp  pathspec.h  pathspecfwd.h  registry.hpp  router.cpp  router.h  router.hpp  security.h  status_result.hpp  status_utility.hpp
zoo/spider/tag_invoke/: byte_string.cpp  byte_string.h  date.cpp  date.h  greg_date.cpp  greg_date.h  optional.hpp  ptime.cpp  ptime.h  shared_ptr.hpp  time_duration.cpp  time_duration.h  time_point.cpp  time_point.h  uuid.cpp  uuid.h
zoo/squid/: CMakeLists.txt  README.md
zoo/squid/core/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  basicstatement.cpp  basicstatement.h  connection.cpp  connection.h  connectionfwd.h  connectionpool.cpp  connectionpool.h  connectionpoolfwd.h  error.cpp  error.h  ibackendconnection.cpp  ibackendconnection.h  ibackendconnectionfactory.cpp  ibackendconnectionfactory.h  ibackendconnectionfactoryfwd.h  ibackendconnectionfwd.h  ibackendstatement.cpp  ibackendstatement.h  ibackendstatementfwd.h  parameter.cpp  parameter.h  preparedstatement.cpp  preparedstatement.h  preparedstatementfwd.h  result.cpp  result.h  statement.cpp  statement.h  transaction.cpp  transaction.h  types.h
zoo/squid/demo/: CMakeLists.txt
zoo/squid/mysql/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  backendconnection.cpp  backendconnection.h  backendconnectionfactory.cpp  backendconnectionfactory.h  backendconnectionfwd.h  connection.cpp  connection.h  error.cpp  (+3 more)
zoo/tui/: CMakeLists.txt  apilinktest.cpp  apilinktest.h  asioinput.cpp  asioinput.h  asioterminal.cpp  asioterminal.h  asiotimer.cpp  asiotimer.h  character.h  keycode.h  keymodifier.h  tuiattribute.h  tuiconfig.h.in  tuiposition.cpp  tuiposition.h  tuisize.cpp  tuisize.h
(+216 files in other folders)
