#
# Copyright (C) 2024 Patrick Rotsaert
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at
# http://www.boost.org/LICENSE_1_0.txt)
#

add_subdirectory(common)
add_subdirectory(bitcask)
add_subdirectory(fs)
add_subdirectory(spider)
add_subdirectory(squid)
