#
# Copyright (C) 2022-2024 Patrick Rotsaert
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at
# http://www.boost.org/LICENSE_1_0.txt)
#

add_zoo_library(spider
	SOURCES
		apilinktest.cpp
		listener.cpp
		http_session.cpp
		http_session.h
		irequest_handler.cpp
		request_router.cpp
		controller.cpp
		exception.cpp
		exception.h
		json_util.cpp
		messages/json_response.cpp
		messages/file_response.cpp
		messages/buffer_response.cpp
		messages/binary_response.cpp
		messages/string_response.cpp
		messages/error_response.cpp
		messages/empty_response.cpp
		messages/tracked_file.cpp
		messages/ifile_event_listener.cpp
		messages/noop_file_event_listener.cpp
		messages/log_response.cpp
		rest/conversions.cpp
		rest/path.cpp
		rest/pathspec.cpp
		rest/isecurityscheme.cpp
		rest/apikeyauthorization.cpp
		rest/basicauthorization.cpp
		rest/bearerauthorization.cpp
		rest/base64.cpp
		rest/auth.cpp
		tag_invoke/time_point.cpp
		tag_invoke/date.cpp
		tag_invoke/time_duration.cpp
		tag_invoke/ptime.cpp
		tag_invoke/greg_date.cpp
		tag_invoke/uuid.cpp
	PUBLIC_HEADERS
		apilinktest.h
		aliases.h
		listener.h
		irequest_handler.h
		request_router.h
		controller.hpp
		json_util.h
		type_traits.h
		messages/message.h
		messages/json_response.h
		messages/file_response.h
		messages/buffer_response.h
		messages/binary_response.h
		messages/string_response.h
		messages/error_response.h
		messages/empty_response.h
		messages/response_wrapper.hpp
		messages/ifile_event_listener.h
		messages/noop_file_event_listener.h
		messages/tracked_file.h
		messages/log_response.h
		messages/content_container.hpp
		rest/annotation.hpp
		rest/concepts.hpp
		rest/controller.hpp
		rest/router.hpp
		rest/conversions.h
		rest/handler.hpp
		rest/openapi.hpp
		rest/operation.h
		rest/parameters.h
		rest/pathfwd.h
		rest/path.h
		rest/pathspecfwd.h
		rest/pathspec.h
		rest/status_result.hpp
		rest/status_utility.hpp
		rest/isecurityscheme.h
		rest/security.h
		rest/apikeyauthorization.h
		rest/basicauthorization.h
		rest/bearerauthorization.h
		rest/base64.h
		rest/auth.h
		tag_invoke/time_point.h
		tag_invoke/date.h
		tag_invoke/time_duration.h
		tag_invoke/ptime.h
		tag_invoke/greg_date.h
		tag_invoke/uuid.h
	MSVC_PRIVATE_COMPILER_OPTIONS
		/wd4702 # for boost\beast\core\impl\buffers_cat.hpp(186): warning C4702: unreachable code
	UNIT_TEST_SOURCES
		test/unit/rest/test_pathspec.cpp
	PUBLIC_LIBRARIES
		zoo::zoocommon
		Boost::system
		Boost::url
		Boost::filesystem
		Boost::json
		Boost::date_time
		fmt::fmt
	FIND_PACKAGE_COMPONENT
		spider
)

if(ZOO_BUILD_EXAMPLES)
	add_subdirectory(examples)
endif()
